# pypilot-signalk-connector

./: CMakeLists.txt  README.md  library.properties
.github/workflows/: arduino.yml  linux.yml
examples/arduino/SignalKConnectorExample/: SignalKConnectorExample.ino
examples/linux/: apply_path_value.cpp  format_delta.cpp
src/: pypilot_signalk_connector.hpp
src/pypilot_signalk_connector/: apply_path_value.hpp  constants.hpp  discovery_endpoint.hpp  format_delta.hpp  json_delta.hpp  mdns_discovery.hpp  outbound_delta.hpp  paths.hpp  put_control.hpp  put_messages.hpp  subscription.hpp  transport.hpp  unsubscribe.hpp
tests/: test_apply_gps.cpp  test_apply_imu.cpp  test_apply_put_control.cpp  test_apply_rudder.cpp  test_apply_water.cpp  test_apply_wind.cpp  test_delta_json.cpp  test_format_delta.cpp  test_mdns_discovery_compile.cpp  test_outbound_delta.cpp  test_subscription.cpp  test_transport_and_messages.cpp
